Adding first Html file

--- a/firstHtml.html
+++ b/firstHtml.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Lalitha</title>
+		<img style="float:right;width:80px"src="img_src.jpg" alt="Girl">
 		<h3>Lalitha</h3>
 		<h1>Geethanjali college of Engineering and Technology</h1>
 		<h2>CSE</h2>
