--- a/firstHtml.html
+++ b/firstHtml.html
@@ -11,16 +11,7 @@
 		<p>
 Html refers to Hypertext markup language which consists of various tags.It has head tag,body tag,and various paragraph tags etc.Every tag should consist of both starting tags aa well as ending tag.The body section of the tag is displayed in the web browser.The title of the web page can be inserted in the head section.The html page consist of doctype at the beginning of the document
 .</p>
-		<ol>
-			<li>data structures</li>
-			<ul><li>trees</li>
-                        <li>graphs</li>
-			</ul>
-			<li>Java</li>
-			<ul><li>api</li>
-				<li>widgets</li>
-			</ul>
-		</ol>
+		<a href="courses.html">Lalitha courses</a>
 	</body>
 </html>
 
