--- a/firstHtml.html
+++ b/firstHtml.html
@@ -1,5 +1,18 @@
 <html>
 	<head>
+		<style>
+.myDiv {
+  border: 5px outset red;
+  background-color: lightblue;
+  text-align: center;
+}
+.div1
+	{
+	  border: 5px outset red;
+  background-color: red;
+  text-align: center;
+}
+</style>
 		<title>Lalitha</title>
 		<img style="float:right;width:80px"src="img_src.jpg" alt="Girl">
 		<h3>Lalitha</h3>
@@ -8,9 +21,15 @@
 	</head>
 
 	<body>
+		<div class="mydiv">
 		<p>
 Html refers to Hypertext markup language which consists of various tags.It has head tag,body tag,and various paragraph tags etc.Every tag should consist of both starting tags aa well as ending tag.The body section of the tag is displayed in the web browser.The title of the web page can be inserted in the head section.The html page consist of doctype at the beginning of the document
-.</p>
+.</p></div>
+		<div class="div1">
+		<p>This division is about css.
+                 Css refers to cascading style sheets.It is used in formatting</p>
+		</div>
+		</p>
 		<a href="courses.html">Lalitha courses</a>
 	</body>
 </html>
