--- a/firstHtml.html
+++ b/firstHtml.html
@@ -14,7 +14,8 @@
 }
 </style>
 		<title>Lalitha</title>
-		<img style="float:right;width:80px"src="img_src.jpg" alt="Girl">
+		<iframe src="lordshiva" width="100%" height="100">
+		</iframe>
 		<h3>Lalitha</h3>
 		<h1>Geethanjali college of Engineering and Technology</h1>
 		<h2>CSE</h2>
