--- a/firstHtml.html
+++ b/firstHtml.html
@@ -14,7 +14,7 @@
 }
 </style>
 		<title>Lalitha</title>
-		<iframe src="lordshiva" width="100%" height="100">
+		<iframe style="float:right;"src="lordshiva.jpg" alt="Image not in the database" width="100%" height="100">
 		</iframe>
 		<h3>Lalitha</h3>
 		<h1>Geethanjali college of Engineering and Technology</h1>
