--- a/form1.html
+++ b/form1.html
@@ -2,16 +2,20 @@
 <head>
 	<title>form1	
 	</title>
+	<script>
+	</script>
 </head>
 <body>
-	<form>
+	<form action="Details.html" id="myform" alt="detalis are not available">
 	Name:	<input type="text" name="name">
 	<br><br>phone number<input type="text" name="phno">
 	<br><br>courses<br><input type="radio" name="courses">bachelors<br><input type="radio" name="courses"> Masters</br></br>
 Description<input type="text area" name="text area" width:"75%" height:"300px">
-<br><br>subjects<br>
+<br><br >subjects<br>
 	<input type="checkbox" name="subject">AI<br>
 	<input type="checkbox" name="subject">IOT<br>
+	<input type="submit" name="display">
+	
 	</form>
 </body>
 </html>
