--- a/form1.html
+++ b/form1.html
@@ -6,7 +6,7 @@
 	</script>
 </head>
 <body>
-	<form action="Details.html" id="myform" alt="detalis are not available">
+	<form action="Details.html" id="myform" method="get">
 	Name:	<input type="text" name="name">
 	<br><br>phone number<input type="text" name="phno">
 	<br><br>courses<br><input type="radio" name="courses">bachelors<br><input type="radio" name="courses"> Masters</br></br>
