form to register

--- a/courses.html
+++ b/courses.html
@@ -1,6 +1,10 @@
 <html>
+	<head>
+		<h1>Courses Offered</h1>
+		<title>Courses</title>
+	</head>
 	<body>
-		  <ol>
+		<ol>
                         <li>data structures</li>
                         <ul><li>trees</li>
                         <li>graphs</li>
@@ -9,6 +13,17 @@
                         <ul><li>api</li>
                                 <li>widgets</li>
                         </ul>
-                </ol>
+		</ol>
+
+		<a href="myform.html">Register</a>
+		<a 
+			<form name="register">
+				</br></br>course<input type="text" name="course" required>
+				</br></br>topic<input type="text" name="topic" required>
+				</br></br><input type="submit" name="submit">
+			</form>
+		</a>
+
+	
 	</body>
 </html>
