--- a/Demo.html
+++ b/Demo.html
@@ -1,5 +1,14 @@
 <html>
 	<head>
-		hii
+		<title>Demo</title>
+		<style>
+			body {
+  background-color: lightblue;
+}
+		</style>
 	</head>
+			<body>
+				<p>This is internship</p>
+	</body>
+	
 </html>
