--- a/Demo.html
+++ b/Demo.html
@@ -4,6 +4,8 @@
 		<style>
 			body {
   background-color: pink;
+font-family: "Times New Roman", Times, serif;
+font-style: italic;
 }
 		</style>
 	</head>
