--- a/Demo.html
+++ b/Demo.html
@@ -6,12 +6,41 @@
   background-color: pink;
 font-family: "Times New Roman", Times, serif;
 font-style: italic;
+
+ background-image: url("lordshiva.jpg");
+}
+/* unvisited link */
+a:link {
+  color: red;
+}
+
+/* visited link */
+a:visited {
+  color: yellow;
+}
+
+/* mouse over link */
+a:hover {
+  color: white;
+}
+
+/* selected link */
+a:active {
+  color: black;
 }
 		</style>
 	</head>
 			<body>
-				<h1 style="color:white;">Internship</h1>
+<h1 style="color:white;">Internship</h1>
 				<p>This is internship</p>
+<form>
+<br>name:<input type="text" id="name">
+<br>branch:<input type="text" id="group">
+<br>submit:<a><input type="submit" id="name"></a>
+<br>
+<a>register</a>
+</form>
 	</body>
 	
 </html>
+
