--- a/Demo.html
+++ b/Demo.html
@@ -28,6 +28,9 @@ a:hover {
 a:active {
   color: black;
 }
+ul.a {
+  list-style-type: circle;
+}
 		</style>
 	</head>
 			<body>
@@ -36,6 +39,12 @@ a:active {
 <form>
 <br>name:<input type="text" id="name">
 <br>branch:<input type="text" id="group">
+	<br>courses offered<br>
+<ul>
+<li>AI</li>
+<li</IOT></li>
+<li>vlsi</li>
+</ul>
 <br>submit:<a><input type="submit" id="name"></a>
 <br>
 <a>register</a>
