--- a/Demo.html
+++ b/Demo.html
@@ -31,11 +31,20 @@ a:active {
 ul.a {
   list-style-type: circle;
 }
+			div{
+  border: 1px solid black;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-right: 50px;
+  margin-left: 50px;
+  background-color: lightblue;
+}
 		</style>
 	</head>
 			<body>
 <h1 style="color:white;">Internship</h1>
 				<p>This is internship</p>
+				<div>This internship is offered by iiith</div>
 <form>
 <br>name:<input type="text" id="name">
 <br>branch:<input type="text" id="group">
