--- a/Demo.html
+++ b/Demo.html
@@ -39,11 +39,12 @@ ul.a {
   margin-left: 50px;
   background-color: lightblue;
 }
+p.dotted {outline-style: dotted;}
 		</style>
 	</head>
 			<body>
 <h1 style="color:white;">Internship</h1>
-				<p>This is internship</p>
+				<p class="dotted">This is internship</p>
 				<div>This internship is offered by iiith</div>
 <form>
 <br>name:<input type="text" id="name">
