--- a/Demo.html
+++ b/Demo.html
@@ -39,12 +39,12 @@ ul.a {
   margin-left: 50px;
   background-color: lightblue;
 }
-p.dotted {outline-style: dotted;}
+table.dotted {outline-style: dotted;}
 		</style>
 	</head>
 			<body>
 <h1 style="color:white;">Internship</h1>
-				<p class="dotted">This is internship</p>
+				<p >This is internship</p>
 				<div>This internship is offered by iiith</div>
 <form>
 <br>name:<input type="text" id="name">
@@ -55,6 +55,24 @@ p.dotted {outline-style: dotted;}
 <li</IOT></li>
 <li>vlsi</li>
 </ul>
+<br><table class="dotted">
+<tr>
+<th>SUBJECT</th>
+<th>MARKS</th>
+</tr>
+<tr>
+<td>AI</td>
+<td>95</td>
+</tr>
+<tr>
+<td>IOT</td>
+<td>85</td>
+</tr>
+<tr>
+<td>VLSI</td>
+<td>75</td>
+</tr>
+</table>
 <br>submit:<a><input type="submit" id="name"></a>
 <br>
 <a>register</a>
