--- a/Demo.html
+++ b/Demo.html
@@ -9,6 +9,13 @@ font-style: italic;
 
  background-image: url("lordshiva.jpg");
 }
+			h1{
+border:2px solid black;
+ padding-top: 75px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 600px;
+}
 /* unvisited link */
 a:link {
   color: red;
