--- a/Demo.html
+++ b/Demo.html
@@ -9,6 +9,15 @@ font-style: italic;
 
  background-image: url("lordshiva.jpg");
 }
+	[class|=dotted]
+{
+background : yellow;
+}
+       td[class="AI"]
+			{
+				background:green;
+			}
+			
 			h1{
 border:2px solid black;
  padding-top: 75px;
@@ -68,7 +77,7 @@ table.dotted {outline-style: dotted;}
 <th>MARKS</th>
 </tr>
 <tr>
-<td>AI</td>
+<td class="AI">AI</td>
 <td>95</td>
 </tr>
 <tr>
