--- a/Demo.html
+++ b/Demo.html
@@ -18,7 +18,8 @@ background : yellow;
 				background:green;
 			}
 			
-			h1{
+			h1.hidden{
+				visibility:hidden;
 border:2px solid black;
  padding-top: 75px;
   padding-right: 75px;
@@ -59,7 +60,7 @@ table.dotted {outline-style: dotted;}
 		</style>
 	</head>
 			<body>
-<h1 style="color:white;">Internship</h1>
+<h1 class="hidden">Internship</h1>The Heading is hidden
 				<p >This is internship</p>
 				<div>This internship is offered by iiith</div>
 <form>
