--- a/Demo.html
+++ b/Demo.html
@@ -49,6 +49,7 @@ ul.a {
   list-style-type: circle;
 }
 			div{
+				position:static;
   border: 1px solid black;
   margin-top: 50px;
   margin-bottom: 50px;
