--- a/Demo.html
+++ b/Demo.html
@@ -48,6 +48,9 @@ a:active {
 ul.a {
   list-style-type: circle;
 }
+img
+{float:left;
+			}
 			div{
 				position:static;
   border: 1px solid black;
@@ -61,7 +64,8 @@ table.dotted {outline-style: dotted;}
 		</style>
 	</head>
 			<body>
-<h1 class="hidden">Internship</h1>The Heading is hidden
+<img src="lordshiva.jpg" alt="LORD SHIVA">				
+<h1 >Internship</h1>
 				<p >This is internship</p>
 				<div>This internship is offered by iiith</div>
 <form>
