--- a/Demo.html
+++ b/Demo.html
@@ -9,6 +9,16 @@ font-style: italic;
 
  background-image: url("lordshiva.jpg");
 }
+.right
+{
+text-align: right;
+padding:2px;
+}
+.left
+{
+text-align: left;
+padding:2px;
+}
 	[class|=dotted]
 {
 background : yellow;
@@ -83,16 +93,16 @@ table.dotted {outline-style: dotted;}
 <th>MARKS</th>
 </tr>
 <tr>
-<td class="AI">AI</td>
-<td>95</td>
+<td class="left">AI</td>
+<td class="right">95</td>
 </tr>
 <tr>
-<td>IOT</td>
-<td>85</td>
+<td class="left">IOT</td>
+<td class="right">85</td>
 </tr>
 <tr>
-<td>VLSI</td>
-<td>75</td>
+<td class="left">VLSI</td>
+<td class="right">75</td>
 </tr>
 </table>
 <br>submit:<a><input type="submit" id="name"></a>
