--- a/Demo.html
+++ b/Demo.html
@@ -9,6 +9,11 @@ font-style: italic;
 
  background-image: url("lordshiva.jpg");
 }
+			ul.xyz{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 .right
 {
 text-align: right;
@@ -77,6 +82,11 @@ table.dotted {outline-style: dotted;}
 <img src="lordshiva.jpg" alt="LORD SHIVA">				
 <h1 >Internship</h1>
 				<p >This is internship</p>
+				<ul class="xyz">
+  <li><a href="home1.html">Home</a></li>
+  <li><a href="register1.html">Register</a></li>
+  <li><a href="Details1.html">Details</a></li>
+</ul>
 				<div>This internship is offered by iiith</div>
 <form>
 <br>name:<input type="text" id="name">
