--- a/Demo.html
+++ b/Demo.html
@@ -83,9 +83,9 @@ table.dotted {outline-style: dotted;}
 <h1 >Internship</h1>
 				<p >This is internship</p>
 				<ul class="xyz">
-  <li><a href="home1.html">Home</a></li>
-  <li><a href="register1.html">Register</a></li>
-  <li><a href="Details1.html">Details</a></li>
+  <a href="home1.html">Home</a>
+  <a href="register1.html">Register</a>
+  <a href="Details1.html">Details</a>
 </ul>
 				<div>This internship is offered by iiith</div>
 <form>
