--- a/Demo.html
+++ b/Demo.html
@@ -9,6 +9,7 @@ font-style: italic;
 
  background-image: url("lordshiva.jpg");
 }
+tr:nth-child(even) {background-color: red;}
 			ul.xyz{
   list-style-type: none;
   margin: 0;
