--- a/registration.html
+++ b/registration.html
@@ -8,24 +8,25 @@ a:link {
   text-decoration: none;
 }
 </style>
-<h1 style="font-size:20px;text-align:center;font-weight:bold;">HOME PAGE:</h1>
+<h1 style="font-size:22px;text-align:center;font-weight:bold;font-family: Arial, Helvetica, sans-serif;">REGISTRATION PAGE:</h1>
 <a href="https://serc.iiit.ac.in/rdip">
 <h1 style="font-size:20px;text-align:right;font-weight:bold;">RDIP</h1></a>
 <a href="https://www.iiit.ac.in/">
 <img src="https://www.iiit.ac.in/img/iiit-new.png" style="width:70px;height:60px;"></a>
-<h1 style="font-size:10px;background-color:grey;"><a href="homepage.html" style="font-size:20px;color:white;font-weight: lighter;">Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<emsp></a><a href="registration.html" style="font-size:20px;color:white;font-weight: lighter;"><emsp>Register</a></h1>
+<h1 style="font-size:10px;background-color:black;"><a href="homepage.html" style="font-size:20px;color:white;font-weight: lighter;">Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<emsp></a><a href="registration.html" style="font-size:20px;color:white;font-weight: lighter;"><emsp>Registeration Form</a></h1>
 <body><br>
-<form action="details.html" style="font-size:20px;text-align:left;font-weight:bold;" onsubmit="validate()" >
-First Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="name" id="name" required><br><br>
-email:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="email"  id="email" required><br><br>
-Phone no:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="Phoneno" id="Phoneno" required><br><br>
-gender:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio"  name="gender" id="gender" required>Male
+<form action="details.html" style="font-size:20px;font-weight:bold;" onsubmit="validate()" method="Get()">
+&nbsp;&nbsp;&nbsp;&nbsp;First Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="name" id="name" required><br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;email:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="email"  id="email" required><br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;Phone no:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="Phoneno" id="Phoneno" required><br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;gender:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio"  name="gender" id="gender" required>Male
 <input type="radio" name="gender"  id="gender" required>Female
 <input type="radio" name="gender" id="gender" required>Others<br></p>
 Reason for RDIP&nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="checkbox" id="checkbox" value="no">HTML<input type="checkbox" name="checkbox" id="checkbox" value="no">CSS<input type="checkbox" name="checkbox" id="checkbox" value="no">JavaScript
-<br><br>college &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="college" id="college" required><br>
-<br><input type="checkbox" name="declare" id="declare" required>&nbsp;&nbsp;&nbsp;&nbsp;I declare above details given by me are true<br><br>
-<input type="submit" name="submit" >
+<br><br>&nbsp;&nbsp;&nbsp;&nbsp;college &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="college" id="college" required><br>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="declare" id="declare" required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I declare above details given by me are true<br><br>
+<input type="submit" name="submit" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="reset" name="reset">
 </form>
 </body>
 </html>
