--- a/homepage.html
+++ b/homepage.html
@@ -9,12 +9,12 @@ a:link {
   
 }
 </style>
-<h1 style="font-size:20px;text-align:center;font-weight:bold;">HOME PAGE:</h1>
+<h1 style="font-size:20px;text-align:center;font-weight:bold;font-family: Arial, Helvetica, sans-serif;">HOME PAGE:</h1>
 <a href="https://serc.iiit.ac.in/rdip">
 <h1 style="font-size:20px;text-align:right;font-weight:bold;">RDIP</h1></a>
 <a href="https://www.iiit.ac.in/">
 <img src="https://www.iiit.ac.in/img/iiit-new.png" style="width:70px;height:60px;"></a>
-<h1 style="font-size:10px;background-color:grey;"><a href="homepage.html" style="font-size:20px;color:white;font-weight: lighter;">Home&nbsp;&nbsp;&nbsp;&nbsp;<emsp></a><a href="registration.html" style="font-size:20px;color:white;font-weight: lighter;"><emsp>Register</a></h1>
+<h1 style="font-size:10px;background-color:black;"><a href="homepage.html" style="font-size:20px;color:white;font-weight: lighter;">Home&nbsp;&nbsp;&nbsp;&nbsp;<emsp></a><a href="registration.html" style="font-size:20px;color:white;font-weight: lighter;"><emsp>Registeration Form</a></h1>
 <br><h style="font-size:20px;text-align:center;font-weight:bold;" >My Details</h><br>
 <body>
 <br>
