--- a/js1.html
+++ b/js1.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<!--
 	<script>
 		function demo(x,y)
 {
@@ -12,8 +13,21 @@ document.write("sum "+sum);
 }
 
 	</script>
-
+-->
+<script>
+function demo()
+{
+var x=document.getElementById("name").value;
+var res=/[1-9]/g;
+var p=x.match(res);
+if(p!=null)
+document.write("It has digits");
+else
+document.write("It does not have digits");
+}
+</script> 
 </head>
 <body>
-	<input type="button" name="check" onclick="demo(50,20)" value="DemoSum">
+        name:<input type="name" id="name">
+	<input type="button" name="check" onclick="demo()" value="check">
 </body>
