--- a/js1.html
+++ b/js1.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<!--
 	<script>
 		function demo(x,y)
 {
@@ -12,14 +13,64 @@ document.write("sum "+sum);
 document.write(" pow "+Math.pow(x,y));
 document.write(" ceil "+Math.ceil(x));
 }
+-->
+<script>
+function validate()
+{var flag1=0,flag2=0;
+var name=document.getElementById("name").value;
+//alert(name);
+var x=document.getElementById("phno").value;
+var res=/[a-z]/g;
+var p=x.match(res);
+if(p!=null)
+{
+flag1=0;
+}
+else
+{//alert(x);
+flag1=1;
+//alert("flag1:"+flag1);
+}
+var a=[];
+var k=0;
+var z = document.getElementsByName("subject");
+  var i;
 
-	</script>
+  for (i = 0; i < z.length; i++) 
+   {
+    if (z[i].checked == true) 
+    {a[k]=z[i].value;
+k++;
+//alert(z[i].value);
+     flag2=1;
+    }
+  }
+//alert(a[0]);
+if(flag1==1 && flag2==1)
+{//alert("hii");
+document.write("Name:   "+name+"<br/>");
+document.write("phoneNumber:   "+x+"<br/>");
+document.write("subjects chosen are:"+"<br/>");
+ for( var i=0;i<k;i++)
+document.write(a[i]+"<br/>");
+
+}
+else
+{
+if(flag1==0)
+alert("phone number is wrong");
+else
+alert("check box is not checked");
+}
+}
+</script>
 <!--
 <script>
 function demo()
 {
 var x=document.getElementById("name").value;
 var res=/[1-9]/g;
+alert("hii");
 var p=x.match(res);
 if(p!=null)
 document.write("It has digits");
@@ -29,5 +80,15 @@ document.write("It does not have digits");
 </script> 
 </head>
 <body>
-	<input type="button" name="check" onclick="demo(4,0.5)" value="check">
+<form method="Get()" onsubmit="validate()">
+Name:	<input type="text" name="name" id="name"></br></br>
+phone number:<input type="text" name="phno" id="phno"></br></br>
+subjects<br>
+	<input type="checkbox" name="subject" value="AI">AI<br>
+	<input type="checkbox" name="subject" value="IOT" >IOT<br>
+	<!--<input type="button" name="check" onclick="validate()" value="check">-->
+<input type="submit" name="submit" onsubmit="validate()">
+</form>
+<p id="demo"></p>
 </body>
+</html>
